# LabWorkBit

./: CMakeLists.txt
BitApp/: CMakeLists.txt
BitLib/: CMakeLists.txt  TError.cpp
BitTest/: CMakeLists.txt
include/: TBitField.h  TError.h  TSet.h
samples/: main.cpp
src/: TBitField.cpp  TError.cpp  TSet.cpp  TString.cpp
test/: test_tbitfield.cpp  test_tset.cpp
